<resources>

    <string name="app_name">Covid Safe Spaces</string>
    <!-- ................................-->

    <string name="username">Username</string>
    <string name="usernameError">Non-existent username</string>
    <string name="password">Password</string>
    <string name="incorrectPassword">Incorrect Password</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="createAccount">Create my Account</string>

    <string name="mail">Mail</string>
    <string name="passwordConditions">Your password must match at least 3 of these conditions</string>
    <string name="passwordSecurity">Password does not match at least 3 conditions</string>
    <string name="passwordDifferent">Passwords do not match</string>

    <string name="deleteAccount">Delete Account</string>
    <string name="changePassword">Change Password</string>
    <string name="updatePassword">Update Password</string>
    <string name="currentPassword">Current Password</string>
    <string name="newPassword">New Password</string>
    <string name="alertDeleteMessage">Are you sure you want to delete this account?</string>

    <string name="getCapacity">Get Capacity</string>
    <string name="editMeasure">Edit Measure</string>
    <string name="deleteMeasure">Delete Measure</string>
    <string name="building">Building</string>
    <string name="room">Room</string>
    <string name="newMeasure">New Measure</string>
    <string name="selectBuilding">--Select building--</string>
    <string name="selectRoom">--Select room--</string>
    <string name="alertDeleteMeasure">Are you sure you want to delete this measure?</string>
    <string name="fieldsFilled">Fields must be filled</string>
    <string name="settings">Settings</string>
    <string name="settinsUbicationTitle">GPS settings</string>
    <string name="settingsUbicationMessage">GPS is not enabled. Do you want to go to settings menu?</string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="contact">Contact us</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>

    <string name="height">Introduce room height</string>
    <string name="menuHeight">Height</string>
    <string name="measuresDone">No Measures Done</string>

    <string name="squareHelp">STEPS TO FOLLOW\n\nPlace two markers in each side of one wall. We will take care of the rest\n
                \nHaving the measure done, click capture button</string>
    <string name="rectangularHelp">STEPS TO FOLLOW\n\nPlace two markers in each side of wall number 1. Then, press + button (Placed in the menu)
        and measure the second wall. We will take care of the rest\n
                \nHaving the measures done, click capture button</string>
    <string name="lHelp">STEPS TO FOLLOW\n\nPlace two markers in each side of wall number 1. Then, press + button (Placed in the menu)
        and measure the second wall. Press + again and repeat with third wall. Do this until all walls are measured\n
                \nHaving the measures done, click capture button</string>
    <string name="tHelp">STEPS TO FOLLOW\n\nPlace two markers in each side of wall number 1. Then, press + button (Placed in the menu)
        and measure the second wall. Press + again and repeat with third wall. Do this until all walls are measured\n
                \nHaving the measures done, click capture button</string>

    <string name="mlHelp">INSTRUCTIONS\n\nYou have two functions available :\n-Window detection\n-People \n
                Now you are in Window Detection, if you want to change it, press then menu button and select the function you want\n\n
                WINDOW DETECTION:\n\n1.For each window of the room, select to which wall it belongs (Wall menu) and then press capture button.
                When all the windows are captured, press the download icon and the results will be showed.
    </string>
    <string name="mlHelpPeople">In this window you will be able to measure the current people again.\n\n
        Make a photo that includes all the people and press the download icon. Then, the results with the current people will be shown.
    </string>

    <string name="wall">Wall</string>
    <string name="back">Back</string>
    <string name="restart">Restart</string>
    <string name="map">Map</string>


    <string name="uppercase">At least one uppercase</string>
    <string name="lowercase">At least one lowercase</string>
    <string name="number">At least one number</string>
    <string name="specialCharacter">At least one special character</string>

    <string name="mode">Mode</string>

    <string name="people">People</string>

    <!-- ................................-->

    <string name="drawer_open">Open Drawer</string>
    <string name="drawe_close">Close Drawer</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_my_drawer">MyDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>