<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/showMeasures"
        android:title="Show"
        android:icon="@drawable/ic_show_measures"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="Add"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/help"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/help"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/back"
        android:title="@string/back"
        android:icon="@drawable/ic_back"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:id="@+id/restart"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/restart"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:id="@+id/height"
        android:title="@string/menuHeight"
        app:showAsAction="never">

    </item>

    <item
        android:id="@+id/map"
        android:title="@string/map"
        app:showAsAction="never">
    </item>



</menu>