<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    android:background="#D1C4E9"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:context=".Login">
        <ImageView
            android:layout_width="149dp"
            android:layout_height="109dp"
            android:layout_below="@+id/text1"
            android:layout_margin="30dp"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/icono" />
        <EditText
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/login_edittext"
            android:drawableLeft="@drawable/ic_user"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/wrongUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:visibility="gone"
            android:text="@string/usernameError"
            android:textSize="15sp"
            android:textColor="#F00"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/login_edittext"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableRight="@drawable/ic_visible"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/wrongPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:visibility="gone"
            android:text="@string/incorrectPassword"
            android:textSize="15sp"
            android:textColor="#F00"
            />

        <TextView
            android:id="@+id/recoverPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:onClick="recoverPassword"
            android:text="@string/forgotPassword"
            android:textSize="15sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAllCaps="false"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register"
                android:textAllCaps="false"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>