<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="5dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#D1C4E9">

    <Spinner
        android:id="@+id/buildings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/btn_dropdown"/>

    <Spinner
        android:id="@+id/rooms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/btn_dropdown"/>
    <Button
        android:id="@+id/getCapacityButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_download"
        android:text="@string/getCapacity"
         />

    <Button
        android:id="@+id/editMeasureButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_edit"
        android:text="@string/editMeasure"
        />

    <Button
        android:id="@+id/deleteMeasureButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteMeasure"
        android:drawableLeft="@drawable/ic_delete" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D1C4E9">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="12dp"
            android:background="@android:color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:background="#D1C4E9"
            android:layout_centerHorizontal="true"
            android:text="or" />
    </RelativeLayout>

    <EditText
        android:id="@+id/newBuilding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="20sp"
        android:hint="@string/building"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/borde"/>

    <EditText
        android:id="@+id/newRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="20sp"
        android:hint="@string/room"
        android:background="@drawable/borde"/>

    <TextView
        android:id="@+id/newMeasureWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="#F00"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/newMeasureButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newMeasure"
        />

</LinearLayout>