<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#D1C4E9">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        android:background="#D1C4E9">

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:drawableLeft="@drawable/ic_profile"
            android:textSize="25sp"
            android:gravity="center"
            android:text=""
            android:background="@drawable/borde"/>

        <TextView
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:drawableLeft="@drawable/ic_mail"
            android:textSize="25sp"
            android:gravity="center"
            android:text=""
            android:background="@drawable/borde"/>

        <Button
            android:id="@+id/deleteAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/ic_delete"
            android:text="@string/deleteAccount"/>

        <Button
            android:id="@+id/changePasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/ic_lock"
            android:text="@string/changePassword"
            android:onClick="changePassword"/>

        <LinearLayout
            android:id="@+id/changePasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/candado"/>

            <EditText
                android:id="@+id/currentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:drawableLeft="@drawable/ic_lock"
                android:drawableRight="@drawable/ic_visible"
                android:textSize="25sp"
                android:gravity="center"
                android:hint="@string/currentPassword"
                android:inputType="textPassword"
                android:background="@drawable/borde"/>

            <TextView
                android:id="@+id/wrongCurrentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:background="@android:color/transparent"
                android:visibility="gone"
                android:text="@string/incorrectPassword"
                android:textSize="15sp"
                android:textColor="#F00"
                />

            <EditText
                android:id="@+id/password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:drawableLeft="@drawable/ic_lock"
                android:drawableRight="@drawable/ic_visible"
                android:textSize="25sp"
                android:gravity="center"
                android:hint="@string/newPassword"
                android:inputType="textPassword"
                android:background="@drawable/borde"/>

            <EditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:drawableLeft="@drawable/ic_lock"
                android:drawableRight="@drawable/ic_visible"
                android:textSize="25sp"
                android:gravity="center"
                android:hint="@string/newPassword"
                android:inputType="textPassword"
                android:background="@drawable/borde"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/passwordConditions"
                android:textColor="#000000"
                android:textSize="15dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="start">

                <CheckBox
                    android:id="@+id/uppercaseCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:checked="false"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/uppercase"
                    android:id="@+id/uppercaseText"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="start">

                <CheckBox
                    android:id="@+id/lowercaseCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:checked="false"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/lowercase"
                    android:id="@+id/lowercaseText"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="start">

                <CheckBox
                    android:id="@+id/numberCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:checked="false"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/number"
                    android:id="@+id/numberText"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="start">

                <CheckBox
                    android:id="@+id/specialCharacterCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:checked="false"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/specialCharacter"
                    android:id="@+id/specialCharacterText"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Security level:"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    />
                <TextView
                    android:id="@+id/level_sec"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text=""
                    android:layout_marginLeft="30dp"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/wrongNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:background="@android:color/transparent"
                android:visibility="gone"
                android:text=""
                android:textSize="15sp"
                android:textColor="#F00"
                />

            <Button
                android:id="@+id/updatePasswordButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/updatePassword"
                android:onClick="updatePassword"/>


        </LinearLayout>

    </LinearLayout>

</ScrollView>